nivasa-macros/tests/trybuild/on_event_invalid_interceptor_marker.stderr
error: invalid interceptor marker
 --> tests/trybuild/on_event_invalid_interceptor_marker.rs:6:5
  |
6 |     /// nivasa-interceptor:
  |     ^^^^^^^^^^^^^^^^^^^^^^^
